--- a/squirrel/mytemplate/profile.html
+++ b/squirrel/mytemplate/profile.html
@@ -142,7 +142,7 @@
       <p>From  <input id="test3" type="text" name="hometown" placeholder="write here"  value="{{profile.hometown}}"> </p>
       <p>Studies/Working at <input id="test4" type="text" placeholder="write here"  name="school" value="{{profile.school}}"> </p>
 
-      <p>Full name <input id="test6" type="text" name="fullname" minlength="4"  placeholder="write here" value="{{user.first_name}}"> </p>
+      <p>Full name <input id="test6" type="text" name="fullname" minlength="4" maxlength="25"  placeholder="write here" value="{{user.first_name}}"> </p>
 
       <button  type="submit">Save</button>
     </form>
